feat: 属性组和属性列表接口